--- a/src/main/resources/static/post_patient.html
+++ b/src/main/resources/static/post_patient.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/js_patients/post_patient.js"></script>
+    <title>Patient Registration</title>
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Dental Clinic</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownOdont" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dentists</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownOdont">
+                    <a class="dropdown-item" href="/post_dentist.html">Add New Dentist</a>
+                    <a class="dropdown-item" href="/get_all_dentists.html">List Dentists</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPaciente" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Patients</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownPaciente">
+                    <a class="dropdown-item active" href="/post_patient.html">Add New Patient</a>
+                    <a class="dropdown-item" href="/get_all_patients.html">List Patients</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container" style="margin-top:20px">
+    <div class="row">
+        <div class="col-sm-7">
+            <h2>Register New Patient</h2>
+            <form id="add_new_patient">
+                <div class="form-group">
+                    <label class="control-label" for="surname">Surname:</label>
+                    <input class="form-control" type="text" id="surname" placeholder="Last name" name="surname" required>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">Name:</label>
+                    <input class="form-control" type="text" id="name" placeholder="Name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="email">Email:</label>
+                    <input class="form-control" type="email" id="email" placeholder="Email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="dni">DNI:</label>
+                    <input class="form-control" type="number" id="dni" placeholder="DNI" name="dni" required>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="entryDate">Date of Entry:</label>
+                    <input class="form-control" type="date" id="entryDate" name="entryDate" required>
+                </div>
+                <div class="form-group" id="address">
+                    <p>Enter your address details:</p>
+                    <label class="control-label" for="address_street">Street:</label>
+                    <input class="form-control" type="text" id="address_street" placeholder="Street" name="address_street" required>
+
+                    <label class="control-label" for="address_number">Number:</label>
+                    <input class="form-control" type="number" id="address_number" placeholder="Address Number" name="address_number" required>
+
+                    <label class="control-label" for="address_city">City:</label>
+                    <input class="form-control" type="text" id="address_city" placeholder="City" name="address_city" required>
+
+                    <label class="control-label" for="address_province">Province:</label>
+                    <input class="form-control" type="text" id="address_province" placeholder="Province" name="address_province" required>
+                </div>
+
+                <button type="submit" class="btn btn-success" id="btn-add-new-patient">Submit</button>
+            </form>
+
+        </div>
+        <div id="response" style="display:none; margin-top:10px">
+        </div>
+    </div>
+</div>
 </body>
 </html>
