--- a/src/main/resources/static/post_dentist.html
+++ b/src/main/resources/static/post_dentist.html
@@ -43,15 +43,18 @@
             <form id="add_new_dentist">
                 <div class="form-group">
                     <label class="control-label" for="surname">Surname:</label>
-                    <input class="form-control" type="text" id="surname" placeholder="Last name" name="surname" required>
+                    <input class="form-control" type="text" id="surname" placeholder="Last name" name="surname"
+                           maxlength="30" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="name">Name:</label>
-                    <input class="form-control" type="text" id="name" placeholder="Name" name="name" required>
+                    <input class="form-control" type="text" id="name" placeholder="Name" name="name"
+                           maxlength="25" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="license">License:</label>
-                    <input class="form-control" type="number" id="license" placeholder="License" name="license" required>
+                    <input class="form-control" type="number" id="license" placeholder="License" name="license"
+                           maxlength="6" required>
                 </div>
 
                 <button type="submit" class="btn btn-success" id="btn-add-new-dentist">Submit</button>
