--- a/src/main/resources/static/post_patient.html
+++ b/src/main/resources/static/post_patient.html
@@ -43,19 +43,23 @@
             <form id="add_new_patient">
                 <div class="form-group">
                     <label class="control-label" for="surname">Surname:</label>
-                    <input class="form-control" type="text" id="surname" placeholder="Last name" name="surname" required>
+                    <input class="form-control" type="text" id="surname" placeholder="Last name" name="surname"
+                           maxlength="30" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="name">Name:</label>
-                    <input class="form-control" type="text" id="name" placeholder="Name" name="name" required>
+                    <input class="form-control" type="text" id="name" placeholder="Name" name="name"
+                           maxlength="25" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">Email:</label>
-                    <input class="form-control" type="email" id="email" placeholder="Email" name="email" required>
+                    <input class="form-control" type="email" id="email" placeholder="Email" name="email"
+                           maxlength="320" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="dni">DNI:</label>
-                    <input class="form-control" type="number" id="dni" placeholder="DNI" name="dni" required>
+                    <input class="form-control" type="number" id="dni" placeholder="DNI" name="dni"
+                           maxlength="20" required>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="entryDate">Date of Entry:</label>
@@ -64,16 +68,20 @@
                 <div class="form-group" id="address">
                     <p>Enter your address details:</p>
                     <label class="control-label" for="address_street">Street:</label>
-                    <input class="form-control" type="text" id="address_street" placeholder="Street" name="address_street" required>
+                    <input class="form-control" type="text" id="address_street" placeholder="Street"
+                           name="address_street" maxlength="20" required>
 
                     <label class="control-label" for="address_number">Number:</label>
-                    <input class="form-control" type="number" id="address_number" placeholder="Address Number" name="address_number" required>
+                    <input class="form-control" type="number" id="address_number" placeholder="Address Number"
+                           name="address_number" maxlength="5" required>
 
                     <label class="control-label" for="address_city">City:</label>
-                    <input class="form-control" type="text" id="address_city" placeholder="City" name="address_city" required>
+                    <input class="form-control" type="text" id="address_city" placeholder="City"
+                           name="address_city" maxlength="70" required>
 
                     <label class="control-label" for="address_province">Province:</label>
-                    <input class="form-control" type="text" id="address_province" placeholder="Province" name="address_province" required>
+                    <input class="form-control" type="text" id="address_province" placeholder="Province"
+                           name="address_province" maxlength="50" required>
                 </div>
 
                 <button type="submit" class="btn btn-success" id="btn-add-new-patient">Submit</button>
