--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownOdont" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dentists</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownOdont">
-                    <a class="dropdown-item active" href="post_dentist.html">Add New Dentist</a>
+                    <a class="dropdown-item" href="post_dentist.html">Add New Dentist</a>
                     <a class="dropdown-item" href="get_all_dentists.html">List Dentists</a>
                 </div>
             </li>
@@ -29,6 +29,13 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownPaciente">
                     <a class="dropdown-item" href="post_patient.html">Add New Patient</a>
                     <a class="dropdown-item" href="get_all_patients.html">List Patients</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAppoint" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Appointments</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownAppoint">
+                    <a class="dropdown-item" href="/post_appointment.html">Add New Appointment</a>
+                    <a class="dropdown-item" href="/get_all_appointments.html">List Appointments</a>
                 </div>
             </li>
         </ul>
