--- a/src/main/resources/static/get_all_patients.html
+++ b/src/main/resources/static/get_all_patients.html
@@ -34,6 +34,13 @@
                     <a class="dropdown-item active" href="/get_all_patients.html">List Patients</a>
                 </div>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAppoint" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Appointments</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownAppoint">
+                    <a class="dropdown-item" href="/post_appointment.html">Add New Appointment</a>
+                    <a class="dropdown-item" href="/get_all_appointments.html">List Appointments</a>
+                </div>
+            </li>
         </ul>
     </div>
 </nav>
@@ -41,7 +48,7 @@
 <div class="container" style="margin-top:20px">
     <div class="row">
         <div class="col-sm">
-            <h2>List of Patients</h2>
+            <h2>Patients</h2>
             <table class="table" style="margin-top:20px" id="patientTable">
                 <thead>
                 <tr>
