--- a/src/main/resources/static/post_appointment.html
+++ b/src/main/resources/static/post_appointment.html
@@ -7,8 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/js_patients/post_patient.js"></script>
-    <title>Patient Registration</title>
+    <script type="text/javascript" src="/js/js_dentists/post_appointment.js"></script>
+    <title>Appointment Registration</title>
 </head>
 <body>
 
@@ -28,14 +28,14 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPaciente" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Patients</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownPaciente">
-                    <a class="dropdown-item active" href="/post_patient.html">Add New Patient</a>
+                    <a class="dropdown-item" href="/post_patient.html">Add New Patient</a>
                     <a class="dropdown-item" href="/get_all_patients.html">List Patients</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAppoint" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Appointments</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownAppoint">
-                    <a class="dropdown-item" href="/post_appointment.html">Add New Appointment</a>
+                    <a class="dropdown-item active" href="/post_appointment.html">Add New Appointment</a>
                     <a class="dropdown-item" href="/get_all_appointments.html">List Appointments</a>
                 </div>
             </li>
@@ -46,52 +46,24 @@
 <div class="container" style="margin-top:20px">
     <div class="row">
         <div class="col-sm-7">
-            <h2>Register New Patient</h2>
-            <form id="add_new_patient">
+            <h2>Register New Appointment</h2>
+            <form id="add_new_appointment">
                 <div class="form-group">
-                    <label class="control-label" for="surname">Surname:</label>
-                    <input class="form-control" type="text" id="surname" placeholder="Last name" name="surname"
-                           maxlength="30" required>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="name">Name:</label>
-                    <input class="form-control" type="text" id="name" placeholder="Name" name="name"
-                           maxlength="25" required>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="email">Email:</label>
-                    <input class="form-control" type="email" id="email" placeholder="Email" name="email"
-                           maxlength="320" required>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="dni">DNI:</label>
-                    <input class="form-control" type="number" id="dni" placeholder="DNI" name="dni"
+                    <label class="control-label" for="patient_id">Patient ID:</label>
+                    <input class="form-control" type="number" id="patient_id" placeholder="Patient ID" name="patient_id"
                            required>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="entryDate">Date of Entry:</label>
-                    <input class="form-control" type="date" id="entryDate" name="entryDate" required>
+                    <label class="control-label" for="dentist_id">Dentist ID:</label>
+                    <input class="form-control" type="number" id="dentist_id" placeholder="Dentist ID" name="dentist_id"
+                           required>
                 </div>
-                <div class="form-group" id="address">
-                    <p>Enter your address details:</p>
-                    <label class="control-label" for="address_street">Street:</label>
-                    <input class="form-control" type="text" id="address_street" placeholder="Street"
-                           name="address_street" maxlength="20" required>
-
-                    <label class="control-label" for="address_number">Number:</label>
-                    <input class="form-control" type="number" id="address_number" placeholder="Address Number"
-                           name="address_number" required>
-
-                    <label class="control-label" for="address_city">City:</label>
-                    <input class="form-control" type="text" id="address_city" placeholder="City"
-                           name="address_city" maxlength="70" required>
-
-                    <label class="control-label" for="address_province">Province:</label>
-                    <input class="form-control" type="text" id="address_province" placeholder="Province"
-                           name="address_province" maxlength="50" required>
+                <div class="form-group">
+                    <label class="control-label" for="date">Date:</label>
+                    <input class="form-control" type="date" id="date" name="date" required>
                 </div>
 
-                <button type="submit" class="btn btn-success" id="btn-add-new-patient">Submit</button>
+                <button type="submit" class="btn btn-success" id="btn-add-new-dentist">Submit</button>
             </form>
 
         </div>
