--- a/src/main/resources/static/post_dentist.html
+++ b/src/main/resources/static/post_dentist.html
@@ -21,15 +21,22 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownOdont" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dentists</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownOdont">
-                    <a class="dropdown-item" href="/post_dentist.html">Add New Dentist</a>
+                    <a class="dropdown-item active" href="/post_dentist.html">Add New Dentist</a>
                     <a class="dropdown-item" href="/get_all_dentists.html">List Dentists</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPaciente" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Patients</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownPaciente">
-                    <a class="dropdown-item active" href="/post_patient.html">Add New Patient</a>
+                    <a class="dropdown-item" href="/post_patient.html">Add New Patient</a>
                     <a class="dropdown-item" href="/get_all_patients.html">List Patients</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAppoint" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Appointments</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownAppoint">
+                    <a class="dropdown-item" href="/post_appointment.html">Add New Appointment</a>
+                    <a class="dropdown-item" href="/get_all_appointments.html">List Appointments</a>
                 </div>
             </li>
         </ul>
@@ -54,7 +61,7 @@
                 <div class="form-group">
                     <label class="control-label" for="license">License:</label>
                     <input class="form-control" type="number" id="license" placeholder="License" name="license"
-                           maxlength="6" required>
+                           required>
                 </div>
 
                 <button type="submit" class="btn btn-success" id="btn-add-new-dentist">Submit</button>
