--- a/src/main/resources/static/get_all_patients.html
+++ b/src/main/resources/static/get_all_patients.html
@@ -45,6 +45,14 @@
     </div>
 </nav>
 
+<div class="container">
+    <ul class="nav nav-pills">
+        <li class="nav-item indexLink">
+            <a class="nav-link" href="/index.html">Back to Home</a>
+        </li>
+    </ul>
+</div>
+
 <div class="container" style="margin-top:20px">
     <div class="row">
         <div class="col-sm">
@@ -70,6 +78,55 @@
         </div>
         <div id="response" style="display:none; margin-top:10px">
         </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6" style="display:none; margin-top:20px; background-color:#e6fffa; width: 800px; margin: 0 auto;" id="div_patient_updating">
+        <h6>Update Patient</h6>
+        <form id="update_patient_form">
+            <div class="form-group">
+                <label>ID:</label>
+                <input class="form-control" type="text" id="patient_id" readonly>
+            </div>
+            <div class="form-group">
+                <label>Surname:</label>
+                <input class="form-control" type="text" id="surname" placeholder="Surname"
+                       maxlength="30">
+            </div>
+            <div class="form-group">
+                <label>Name:</label>
+                <input class="form-control" type="text" id="name" placeholder="Name"
+                       maxlength="30">
+            </div>
+            <div class="form-group">
+                <label>Email:</label>
+                <input class="form-control" type="email" id="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label>Dni:</label>
+                <input class="form-control" type="number" id="dni" placeholder="DNI">
+            </div>
+            <div class="form-group">
+                <label>Date of entry:</label>
+                <input class="form-control" type="date" id="entryDate">
+            </div>
+            <div class="form-group">
+                <label>Address:</label>
+                <input class="form-control" type="text" id="address" placeholder="Address">
+            </div>
+            <div class="form-group">
+                <label>City:</label>
+                <input class="form-control" type="text" id="city" placeholder="City">
+            </div>
+            <div class="form-group">
+                <label>Province:</label>
+                <input class="form-control" type="text" id="province" placeholder="province">
+            </div>
+
+            <button type="submit" class="btn btn-primary" id="btn-update-patient">Update</button>
+        </form>
+
     </div>
 </div>
 </body>
