--- a/src/main/resources/static/post_dentist.html
+++ b/src/main/resources/static/post_dentist.html
@@ -43,6 +43,14 @@
     </div>
 </nav>
 
+<div class="container">
+    <ul class="nav nav-pills">
+        <li class="nav-item indexLink">
+            <a class="nav-link" href="/index.html">Back to Home</a>
+        </li>
+    </ul>
+</div>
+
 <div class="container" style="margin-top:20px">
     <div class="row">
         <div class="col-sm-7">
@@ -60,7 +68,7 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="license">License:</label>
-                    <input class="form-control" type="number" id="license" placeholder="License" name="license"
+                    <input class="form-control" type="number" id="license" placeholder="Professional license number" name="license"
                            required>
                 </div>
 
