--- a/src/main/resources/static/post_patient.html
+++ b/src/main/resources/static/post_patient.html
@@ -43,6 +43,14 @@
     </div>
 </nav>
 
+<div class="container">
+    <ul class="nav nav-pills">
+        <li class="nav-item indexLink">
+            <a class="nav-link" href="/index.html">Back to Home</a>
+        </li>
+    </ul>
+</div>
+
 <div class="container" style="margin-top:20px">
     <div class="row">
         <div class="col-sm-7">
