--- a/src/main/resources/static/get_all_patients.html
+++ b/src/main/resources/static/get_all_patients.html
@@ -125,6 +125,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary" id="btn-update-patient">Update</button>
+            <button type="button" class="btn btn-secondary" id="btn-update-cancel">Cancel</button>
         </form>
 
     </div>
