--- a/src/main/resources/static/get_all_dentists.html
+++ b/src/main/resources/static/get_all_dentists.html
@@ -100,6 +100,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary" id="btn-update-dentist">Update</button>
+            <button type="button" class="btn btn-secondary" id="btn-update-cancel">Cancel</button>
         </form>
 
     </div>
