--- a/src/main/resources/static/get_all_appointments.html
+++ b/src/main/resources/static/get_all_appointments.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="/js/js_appointments/get_all_appointments.js"></script>
     <script type="text/javascript" src="/js/js_appointments/delete_appointment.js"></script>
     <script type="text/javascript" src="/js/js_appointments/update_appointment.js"></script>
+    <script src="sweetalert2.all.min.js"></script>
     <title>Appointments List</title>
 </head>
 <body>
