Added changes in style

--- a/src/main/resources/static/post_appointment.html
+++ b/src/main/resources/static/post_appointment.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="/js/js_appointments/post_appointment.js"></script>
     <title>Appointment Registration</title>
 </head>
-<body>
+<body style="background-color: #E1FFFE">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Dental Clinic</a>
@@ -43,7 +43,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div style="margin: 8px">
     <ul class="nav nav-pills">
         <li class="nav-item indexLink">
             <a class="nav-link" href="/index.html">Back to Home</a>
