--- a/src/main/resources/static/get_all_appointments.html
+++ b/src/main/resources/static/get_all_appointments.html
@@ -13,7 +13,7 @@
     <script src="sweetalert2.all.min.js"></script>
     <title>Appointments List</title>
 </head>
-<body>
+<body style="background-color: #E1FFFE">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Dental Clinic</a>
@@ -46,7 +46,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div style="margin: 8px">
     <ul class="nav nav-pills">
         <li class="nav-item indexLink">
             <a class="nav-link" href="/index.html">Back to Home</a>
