--- a/src/main/resources/static/get_all_patients.html
+++ b/src/main/resources/static/get_all_patients.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/js/js_patients/update_patient.js"></script>
     <title>Patients List</title>
 </head>
-<body>
+<body style="background-color: #E1FFFE">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Dental Clinic</a>
@@ -45,7 +45,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div style="margin: 8px">
     <ul class="nav nav-pills">
         <li class="nav-item indexLink">
             <a class="nav-link" href="/index.html">Back to Home</a>
