--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>Dental Clinic DH - Home</title>
 </head>
-<body>
+<body style="background-color: #E1FFFE">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Home</a>
@@ -42,21 +42,21 @@
     </div>
 </nav>
 
-<h1>Dental Clinic DH - Home</h1>
-<div class ="container">
+<h1 style="text-align:center; margin: 20px;">Dental Clinic DH - Home</h1>
+<div class ="container" style="margin:auto; display:flex; justify-content:center;">
     <ul class="nav nav-pills" style="display:flex; flex-direction:column;">
-        <h4>Appointments</h4>
-        <li class="nav-item appointmentsLi">
+        <li class="nav-item appointmentsLi" style="margin:10px; text-align:center">
+            <h4>Appointments</h4>
             <a class="nav-link" href="/post_appointment.html">Create Appointment</a>
             <a class="nav-link" href="/get_all_appointments.html">Appointments List</a>
         </li>
-        <h4>Dentists</h4>
-        <li class="nav-item dentistsLi">
+        <li class="nav-item dentistsLi" style="margin:10px; text-align:center">
+            <h4>Dentists</h4>
             <a class="nav-link" href="/post_dentist.html">Register Dentist</a>
             <a class="nav-link" href="/get_all_dentists.html">Dentists List</a>
         </li>
-        <h4>Patients</h4>
-        <li class="nav-item patientsLi">
+        <li class="nav-item patientsLi" style="margin:10px; text-align:center">
+            <h4 style>Patients</h4>
             <a class="nav-link" href="/post_patient.html">Register Patient</a>
             <a class="nav-link" href="/get_all_patients.html">Patients List</a>
         </li>
